--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
+    "/js/dropzone.js": "/js/dropzone.js",
     "/css/app.css": "/css/app.css",
-    "/css/sidebar.css": "/css/sidebar.css"
+    "/css/dropzone.css": "/css/dropzone.css"
 }
